<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/xlarge_padding"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fadingBlue"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_configure_label">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_margin"
                    android:layout_marginStart="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:background="@color/transparent"
                    android:hint="@string/create_budget_name_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:nextFocusDown="@+id/amountEditText" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/nameExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/content_padding"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/create_budget_name_explanation" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkBlue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fadingBlue"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_configure_label">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/amountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_margin"
                    android:layout_marginStart="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:background="@color/transparent"
                    android:hint="@string/amount_hint"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/amountExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/content_padding"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/create_budget_amount_explanation" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkBlue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fadingBlue"
            android:padding="@dimen/activity_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_padding"
                android:text="@string/create_budget_days_hint" />

            <com.travijuu.numberpicker.library.NumberPicker
                android:id="@+id/daysPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:focusable="true"
                app:min="1"
                app:value="30" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_padding"
                android:text="@string/create_budget_repeat_hint" />

            <ToggleButton
                android:id="@+id/repeatSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fadingBlue"
            android:paddingBottom="@dimen/small_padding"
            android:paddingEnd="@dimen/content_padding"
            android:paddingStart="@dimen/content_padding"
            android:text="@string/create_budget_days_repeat_explanation" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkBlue" />
    </LinearLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xlarge_padding"
        android:layout_gravity="bottom"
        android:text="@string/action_save" />
</FrameLayout>